opam-version: "1.2"
version: "0.2.0+dev"
maintainer: "Leo White <leo@lpw25.net>"
authors: [ "Leo White <leo@lpw25.net>" ]
homepage: "https://github.com/lpw25/prof_spacetime"
bug-reports: "https://github.com/lpw25/prof_spacetime/issues"
license: "MIT"
dev-repo: "git://github.com/lpw25/prof_spacetime"
depends: [
  "dune" {build & >= "1.0"}
  "cmdliner"
  "cohttp" {>= "1.0.0"}
  "cohttp-lwt-unix"
  "conduit"
  "conduit-lwt-unix"
  "yojson"
  "lwt"
  "lambda-term"
  "spacetime_lib" { >= "0.2" }
  "stdlib-shims"
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
build-test: [
  ["dune" "runtest" "-p" name "-j" jobs]
]
