opam-version: "2.0"
version: "0.3.0+dev"
synopsis: "A viewer for OCaml spacetime profiles"
maintainer: "Leo White <leo@lpw25.net>"
authors: "Leo White <leo@lpw25.net>"
license: "MIT"
homepage: "https://github.com/lpw25/prof_spacetime"
bug-reports: "https://github.com/lpw25/prof_spacetime/issues"
depends: [
  "ocaml"
  "dune" {build & >= "1.0"}
  "cmdliner"
  "cohttp" {>= "1.0.0"}
  "cohttp-lwt-unix"
  "conduit"
  "conduit-lwt-unix"
  "yojson"
  "lwt"
  "lambda-term"
  "spacetime_lib" {>= "0.2"}
  "stdlib-shims"
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git://github.com/lpw25/prof_spacetime"
description: """
`prof_spacetime` is a viewer for OCaml spacetime profiles. It provides
both terminal and broswer based modes for viewing profiles."""
